--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>영화 오디션 사이트 - Vue 활용제작 </title>
+    <title>영화 오디션 사이트 Vue 사이트 제작</title>
     <link rel="stylesheet" href="./slick/slick.css">
     <link rel="stylesheet" href="./slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +15,7 @@
         <header-el></header-el>
         <bannerTop-el></bannerTop-el>
         <cont1-el></cont1-el>
-        <bannerMid-el></bannerMid-el>
+        <bannermid-el></bannermid-el>
         <cont2-el></cont2-el>
         <review-el></review-el>
         <footer-el></footer-el>
@@ -26,7 +26,7 @@
     <header>
         <div class="wrap">
             <div class="logo">
-                <a href=""><img src="./img/logo_fm.png" alt=""></a>
+                <a href="#"><img src="./img/logo_fm.png" alt=""></a>
             </div>
             <nav>
                 <ul>
@@ -38,14 +38,14 @@
                 </ul>
             </nav>
         </div>
-    </header>
- -->
+    </header> 
+-->
 
-     <!-- bannerTop -->
+    <!-- bannerTop - start -->
 <!-- 
-     <div id="slider">
+    <div id="slider">
         <div class="slide_frame">
-            
+
             <div class="slide">
                 <div class="dark"></div>
             </div>
@@ -54,118 +54,155 @@
         <div class="wrap">
             <div class="text_part">
                 <h2>지금부터 당신의 영화가 시작됩니다.</h2>
-                <a href="">오디션 참가</a>
+                <a href="#">오디션 참가</a>
             </div>
         </div>
 
-    </div>
- -->
+    </div> 
+-->
+    <!-- bannerTop - end -->
+
 
     <!-- cont1 -->
-<!--     
-    <div id="movie">
+    <!-- <div id="movie">
         <div class="wrap">
             <h2>Today's Movie</h2>
             <div class="content">
+
                 <div class="box">
                     <div class="movie_item">
                         <img src="./img/play_icon.png" alt="">
                     </div>
                     <h3>죄 많은 소녀 (After My Death, 2019)</h3>
                 </div>
+
             </div>
         </div>
-    </div>
- -->
+    </div> -->
 
 
-    <!-- bannerMid -->
-<!-- 
+    <!-- banner - middle -->
+    <!-- 
     <div class="banner_middle">
         <div class="wrap">
-            <div class="txt">
-            <h1>Audition Schedule</h1>
-            <p>실시간으로 업데이트 되는 오디션 정보를 확인하실 수 있습니다.<br>배우 또는 배우 지망생분들의 많은 참여 바랍니다.</p>
-                <a class="btn" href="#">오디션 정보 확인</a>
+            <div class="txt_part">
+                <h2>Audition Schedule</h2>
+                <p>실시간으로 업데이트 되는 오디션 정보를 확인 하실 수 있습니다. <br>배우 또는 배우지망생분들의 참여 바랍니다.</p>
+                <a href="">오디션 정보확인</a>
             </div>
         </div>
-    </div>
- -->
+    </div> 
+    -->
 
 
-    <!-- cont2 -->
-<!-- 
-    <div id="actors">
-        <div class="title">
-            <h2>Actors</h2>
-        </div>
-        <div class="people">
-            <div class="box">
-                <img src="./img/yeobeen.png" alt="">
-                <div class="txt_part">
-                    <p>전여빈</p>
-                    <a class="btn" href="">필모그래피</a>
+    <!-- actor -->
+<!--     
+    <div id="actor">
+        <div class="wrap">
+            <div class="title">
+                <h2>Actors</h2>
+            </div>
+            <div class="cont">
+
+                <div class="box">
+                    <div class="actor_bg"></div>
+                    <div class="txt_part">
+                        <p>전여빈</p>
+                        <a href="">필모그래피</a>
+                    </div>
                 </div>
-            </div> 
-        </div>
-        <a href="">더보기</a>
-    </div>
- -->
 
-
-
-    <!-- review -->
-<!-- 
-    <div class="review" style="background-image:url(./img/content_03.png)">
-        <div class="wrap">
-            <div class="txt">
-                <h2>Audition Reviewes</h2>
-                <p>1차 오디션 합격 후, 감독님과의 직접 오디션을 보는 소중한 기회를 얻게 되었습니다. 감독님께서 제시하신 키워드에 맞게 준비한 연기를 보여드렸습니다. 연기가 끝나고 감독님께서는 호흡, 발음, 발성, 집중력 등 다각도에서 꼼꼼한 평을 해주셨습니다. 연기뿐만 아니라 프로필 사진에 대해서도 조언을 해주셨고, 제가 미처 생각하지 못했던 부분을 짚어주셔서 큰 도움을 받게 되었습니다.</p>
-                <div class="img" style="background-image:url(./img/review1.jpg)"></div>
-                <div class="name">김주영</div>
+            </div>
+            <div class="more_btn">
+                <a href="">더보기</a>
             </div>
         </div>
     </div>
- -->
+-->
 
-
-    <!-- footer -->
-<!-- 
-    <footer>
+<!-- review -->
+<!-- <div id="review">
+    <div class="dark">
         <div class="wrap">
-            <ul>
-                <li><a href="#">이용약관</a></li>
-                <li><a href="#">고객상담실</a></li>
-                <li><a href="#">개인정보취급방침</a></li>
+            <div class="title">
+                <h2>Audition Reviews</h2>
+            </div>
+
+            <div class="slider_cover">
+                <div class="slider">
+
+                    <div class="slide">
+                        <p>리뷰 내용1</p>
+                        <div class="img"></div>
+                        <span>김주형1</span>
+                    </div>
+
+                    <div class="slide">
+                        <p>리뷰 내용2</p>
+                        <div class="img"></div>
+                        <span>김주형2</span>
+                    </div>
+
+                    <div class="slide">
+                        <p>리뷰 내용3</p>
+                        <div class="img"></div>
+                        <span>김주형3</span>
+                    </div>
+
+                </div>
+            </div>
+            <div class="pager">
+                <ol>
+                    <li class="active" rel="0"></li>
+                    <li rel="1"></li>
+                    <li rel="2"></li>
+                </ol>
+            </div>
+        </div>
+    </div>
+
+</div> -->
+
+
+    <!-- <footer>
+        <div class="wrap">
+            <ul class="footer_link">
+                <li><a href="">이용약관</a></li>
+                <li><a href="">고객상담실</a></li>
+                <li><a href="">개인정보취급방침</a></li>
             </ul>
-            <div class="line"></div>
-            <div class="bottom">
-                <div class="right">
+            <div class="footer_info">
+                <div class="box">
                     <ul>
-                        <li><a>Filmmakers</a></li>
-                        <li><a>대표 : 임지애</a></li>
-                        <li><a>사업자등록번호 : 113-28-507</a></li>
-                        <li><a>주소 : 서울특별시 강남구 논현로</a></li>
-                        <li><a>개인정보관리책임자 : 한상용</a></li>
-                        <li><a>ⓒ 1999 - 2022 Filmmakers</a></li>
+                        <li><span>Filmmakers</span></li>
+                        <li><span>대표 : 임지애</span></li>
+                        <li><span>사업자등록번호 : 113-28-507</span></li>
                     </ul>
+                    <ul>
+                        <li><span>주소 : 서울특별시 강남구 논현로</span></li>
+                        <li><span>개인정보관리책임자 : 한상용</span></li>
+                    </ul>
+                    <p>&copy; 1999 - 2022 Filmmakers</p>
                 </div>
-                <div class="left">
+                <div class="box">
+                    <p>고객센터(이용 및 결제 문의) 제휴 및 대외 협력, 광고 문의</p>
                     <ul>
-                        <li><a>고객센터(이용 및 결제 문의) 제휴 및 대외 협력, 광고 문의</a></li>
-                        <li><a>대표전화 : 02-1234-5678</a></li>
-                        <li><a>카카오톡 플러스친구 : 필름메이커스</a></li>
-                        <li><a href="#">이메일 : info@filmmakers.com</a></li>
+                        <li><span>대표전화 : 02-1234-5678</span></li>
+                        <li><span>카카오톡 플러스친구 : 필름메이커스</span></li>
                     </ul>
+                    <p>이메일 : info@filmmakers.com</p>
                 </div>
             </div>
         </div>
-    </footer>
- -->
+    </footer> -->
 
 
 
 
+
+
+
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./slick/slick.js"></script>
     <script src="./js/script.js"></script>
